# scalp

./: CMakeLists.txt  MIGRATION.txt  README  README.txt  repo_created-remove_me_on_first_ci.txt  scalp_repo_moved_to_git.txt
examples/: Makefile
examples/advanced_gurobi/: Makefile  advanced_gurobi.cc
examples/dynamic/: Makefile  dynamic.cc
examples/simple_gurobi/: Makefile  simple_gurobi.cc
src/: main.cpp  parse.cpp  parse.h  strstream.h
src/ILP/: Constraint.cpp  Constraint.h  Exception.cpp  Exception.h  Objective.cpp  Objective.h  Result.cpp  Result.h  Solver.cpp  Solver.h  SolverBackend.cpp  SolverBackend.h  Term.cpp  Term.h  Variable.cpp  Variable.h
src/ILP/SolverBackend/: SolverCPLEX.cpp  SolverCPLEX.h  SolverCPLEX_intern.h  SolverDynamic.cpp  SolverDynamic.h  SolverGurobi.cpp  SolverGurobi.h  SolverGurobi_intern.h  SolverLPSolve.cpp  SolverLPSolve.h  SolverLPSolve_intern.h  SolverSCIP.cpp  SolverSCIP.h  SolverSCIP_intern.h
src/ScaLP/: Constraint.cpp  Constraint.h  Exception.cpp  Exception.h  Objective.cpp  Objective.h  Result.cpp  Result.h  ResultCache.cpp  ResultCache.h  Solver.cpp  Solver.h  SolverBackend.cpp  SolverBackend.h  Term.cpp  Term.h  Utility.h  Variable.cpp  Variable.h
src/ScaLP/SolverBackend/: SolverCPLEX.cpp  SolverCPLEX.h  SolverCPLEX_intern.h  SolverDynamic.cpp  SolverDynamic.h  SolverGurobi.cpp  SolverGurobi.h  SolverGurobi_intern.h  SolverLPSolve.cpp  SolverLPSolve.h  SolverLPSolve_intern.h  SolverSCIP.cpp  SolverSCIP.h  SolverSCIP_intern.h
src/tests/: CMakeLists.txt  FeasibilityCheck_ALL.cpp  Operators.cpp  README.txt  TermCompaction_ALL.cpp  TermGeneration_ALL.cpp  TestTemplate.cpp
